--- a/popup/popup.html
+++ b/popup/popup.html
@@ -4,58 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
-    <style>
-      * {
-        margin: 0;
-        padding: 0;
-        box-sizing: border-box;
-      }
-      body {
-        font-family: "Noto Sans KR", sans-serif;
-        font-size: 14px;
-        color: #333;
-      }
-      .container {
-        width: 100%;
-        height: 100vh;
-        display: flex;
-        justify-content: center;
-        align-items: center;
-      }
-      .card {
-        width: 400px;
-        height: 400px;
-        border: 1px solid #333;
-        border-radius: 10px;
-        padding: 20px;
-      }
-      .title {
-        font-size: 20px;
-        font-weight: bold;
-        margin-bottom: 20px;
-      }
-      .row {
-        display: flex;
-        justify-content: space-between;
-        align-items: center;
-        margin-bottom: 10px;
-      }
-      .row label {
-        font-size: 16px;
-      }
-      .row input {
-        width: 20px;
-        height: 20px;
-      }
-      .box {
-        padding: 20px;
-        border: 1px solid #333;
-      }
-      .box .row input {
-        width: 50px;
-        height: 20px;
-      }
-    </style>
+    <link type="text/css" rel="stylesheet" href="popup.css" />
   </head>
   <body>
     <!-- 
@@ -74,16 +23,24 @@
           <input type="checkbox" id="useShortcut" />
         </div>
         <div class="row">
-          <details id="shortcut-key" class="shortcut-detail">
+          <details id="shortcutKey" class="shortcut-detail" open>
             <summary>단축키 키설정</summary>
             <div class="box">
               <div class="row">
-                <label for="play-pause">재생/일시정지</label>
-                <input type="text" id="play-pause" value="k" />
+                <label for="playPause">재생/일시정지</label>
+                <input type="text" id="playPause" value="k" />
               </div>
               <div class="row">
-                <label for="play-pause">재생/일시정지</label>
-                <input type="text" id="play-pause" value="k" />
+                <label for="muteUnmute">음소거/음소거 해제</label>
+                <input type="text" id="muteUnmute" value="m" />
+              </div>
+              <div class="row">
+                <label for="changeViewMode">화면 전환</label>
+                <input type="text" id="changeViewMode" value="t" />
+              </div>
+              <div class="row">
+                <label for="fullScreen">전체 화면</label>
+                <input type="text" id="fullScreen" value="f" />
               </div>
             </div>
           </details>
